add drawable image, icon..

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ex</string>
+    <string name="note">To be, or not to be: that is th question</string>
 </resources>
