--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Ex</string>
-    <string name="note">To be, or not to be: that is th question</string>
+    <string name="title">
+        Send and receive SMS from Messenger
+    </string>
+    <string name="content">
+        Manage all of your conversations in one place and use stickers and chat heads. SMS conversations are displayed separately in Messenger and are only available via a mobile phone. Standard text message charges will be charged.
+    </string>
+    <string name="button">OK</string>
+    <string name="setting">Setting</string>
 </resources>
